hphp/test/slow/ctor_param_promotion_bad_mod.php.expectf
Fatal error: syntax error, unexpected T_STATIC, expecting '&' or T_VARIABLE or ... in %stest/slow/ctor_param_promotion_bad_mod.php on line 7
